src/test/deca/syntax/invalid/parenthese4.deca
//Description
//    Vérifier la considération des parenthèses
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
while(a==3{;}
}
